OAK-11105: Remove usage of Guava ImmutableMap.of() - zero argument case