@@ -40,6 +40,7 @@ import org.apache.sling.testing.mock.osgi.junit.OsgiContext;
 import org.junit.Rule;
 import org.junit.Test;
 
+import java.util.Map;
 import java.util.Set;
 
 import static org.junit.Assert.assertEquals;
@@ -55,7 +56,7 @@ public class PrincipalBasedAuthorizationConfigurationOsgiTest extends AbstractPr
 
     @Test(expected = ReferenceViolationException.class)
     public void testMissingMandatoryReferences() {
-        context.registerInjectActivateService(pbac, ImmutableMap.of());
+        context.registerInjectActivateService(pbac, Map.of());
     }
 
     @Test(expected = ReferenceViolationException.class)
@@ -67,7 +68,7 @@ public class PrincipalBasedAuthorizationConfigurationOsgiTest extends AbstractPr
     @Test(expected = ReferenceViolationException.class)
     public void testMissingFilterProviderReference() {
         context.registerInjectActivateService(new MountInfoProviderService());
-        context.registerInjectActivateService(pbac, ImmutableMap.of());
+        context.registerInjectActivateService(pbac, Map.of());
     }
 
     @Test
@@ -79,7 +80,7 @@ public class PrincipalBasedAuthorizationConfigurationOsgiTest extends AbstractPr
         context.registerInjectActivateService(mipService, ImmutableMap.of("mountedPaths", new String[] {SUPPORTED_PATH + "/some/subtree", "/etc"}));
 
         try {
-            context.registerInjectActivateService(pbac, ImmutableMap.of());
+            context.registerInjectActivateService(pbac, Map.of());
         } catch (RuntimeException e) {
             assertTrue(e.getCause() instanceof IllegalStateException);
         }
@@ -93,7 +94,7 @@ public class PrincipalBasedAuthorizationConfigurationOsgiTest extends AbstractPr
         MountInfoProviderService mipService = new MountInfoProviderService();
         context.registerInjectActivateService(mipService, ImmutableMap.of("mountedPaths", new String[] {SUPPORTED_PATH}));
 
-        context.registerInjectActivateService(pbac, ImmutableMap.of());
+        context.registerInjectActivateService(pbac, Map.of());
     }
 
     @Test
@@ -104,7 +105,7 @@ public class PrincipalBasedAuthorizationConfigurationOsgiTest extends AbstractPr
         MountInfoProviderService mipService = new MountInfoProviderService();
         context.registerInjectActivateService(mipService, ImmutableMap.of("mountedPaths", new String[] {Text.getRelativeParent(SUPPORTED_PATH, 1)}));
 
-        context.registerInjectActivateService(pbac, ImmutableMap.of());
+        context.registerInjectActivateService(pbac, Map.of());
     }
 
     @Test
@@ -115,7 +116,7 @@ public class PrincipalBasedAuthorizationConfigurationOsgiTest extends AbstractPr
         MountInfoProviderService mipService = new MountInfoProviderService();
         context.registerInjectActivateService(mipService, ImmutableMap.of("mountedPaths", new String[] {"/etc", "/var/some/mount", UserConstants.DEFAULT_GROUP_PATH}));
 
-        context.registerInjectActivateService(pbac, ImmutableMap.of());
+        context.registerInjectActivateService(pbac, Map.of());
     }
 
     @Test
