@@ -239,7 +239,7 @@ public class PrincipalPolicyImplTest extends AbstractPrincipalBasedTest {
     @Test
     public void testAddEntriesWithRestrictionsForSamePath() throws Exception {
         assertTrue(emptyPolicy.addEntry(testJcrPath, privilegesFromNames(PrivilegeConstants.JCR_ADD_CHILD_NODES)));
-        assertTrue(emptyPolicy.addEntry(testJcrPath, privilegesFromNames(PrivilegeConstants.JCR_REMOVE_CHILD_NODES), ImmutableMap.of(), createMvRestrictions(REP_ITEM_NAMES, PropertyType.NAME, "removable")));
+        assertTrue(emptyPolicy.addEntry(testJcrPath, privilegesFromNames(PrivilegeConstants.JCR_REMOVE_CHILD_NODES), Map.of(), createMvRestrictions(REP_ITEM_NAMES, PropertyType.NAME, "removable")));
 
         PrivilegeBitsProvider bitsProvider = new PrivilegeBitsProvider(root);
 
@@ -260,8 +260,8 @@ public class PrincipalPolicyImplTest extends AbstractPrincipalBasedTest {
 
     @Test
     public void testAddEntriesWithMultipleRestrictionsForSamePath() throws Exception {
-        assertTrue(emptyPolicy.addEntry(testJcrPath, privilegesFromNames(PrivilegeConstants.JCR_ADD_CHILD_NODES), createGlobRestriction("/any*/glob"), ImmutableMap.of()));
-        assertTrue(emptyPolicy.addEntry(testJcrPath, privilegesFromNames(PrivilegeConstants.JCR_REMOVE_CHILD_NODES), ImmutableMap.of(), createMvRestrictions(REP_ITEM_NAMES, PropertyType.NAME, "removable")));
+        assertTrue(emptyPolicy.addEntry(testJcrPath, privilegesFromNames(PrivilegeConstants.JCR_ADD_CHILD_NODES), createGlobRestriction("/any*/glob"), Map.of()));
+        assertTrue(emptyPolicy.addEntry(testJcrPath, privilegesFromNames(PrivilegeConstants.JCR_REMOVE_CHILD_NODES), Map.of(), createMvRestrictions(REP_ITEM_NAMES, PropertyType.NAME, "removable")));
 
         PrivilegeBitsProvider bitsProvider = new PrivilegeBitsProvider(root);
 
@@ -310,7 +310,7 @@ public class PrincipalPolicyImplTest extends AbstractPrincipalBasedTest {
         PrincipalPolicyImpl plc = new PrincipalPolicyImpl(principal, POLICY_OAK_PATH, mp);
         String jcrName = namePathMapper.getJcrName("oak:mandatory");
         Map<String,Value[]> mvRestrictions = ImmutableMap.of(jcrName, new Value[] {getValueFactory(root).createValue(1)});
-        plc.addEntry(testJcrPath, privilegesFromNames(PrivilegeConstants.JCR_VERSION_MANAGEMENT), ImmutableMap.of(), mvRestrictions);
+        plc.addEntry(testJcrPath, privilegesFromNames(PrivilegeConstants.JCR_VERSION_MANAGEMENT), Map.of(), mvRestrictions);
     }
 
     @Test(expected = AccessControlException.class)
@@ -324,7 +324,7 @@ public class PrincipalPolicyImplTest extends AbstractPrincipalBasedTest {
         PrincipalPolicyImpl plc = new PrincipalPolicyImpl(principal, POLICY_OAK_PATH, mp);
         String jcrName = namePathMapper.getJcrName("oak:mandatory");
         Map<String,Value> svRestrictions = ImmutableMap.of(jcrName, getValueFactory(root).createValue(1));
-        plc.addEntry(testJcrPath, privilegesFromNames(PrivilegeConstants.JCR_VERSION_MANAGEMENT), svRestrictions, ImmutableMap.of());
+        plc.addEntry(testJcrPath, privilegesFromNames(PrivilegeConstants.JCR_VERSION_MANAGEMENT), svRestrictions, Map.of());
     }
 
     @Test(expected = AccessControlException.class)
@@ -336,7 +336,7 @@ public class PrincipalPolicyImplTest extends AbstractPrincipalBasedTest {
 
         PrincipalPolicyImpl plc = new PrincipalPolicyImpl(principal, POLICY_OAK_PATH, mp);
         Map<String,Value> svRestrictions = ImmutableMap.of("oak:mandatory", getValueFactory(root).createValue(1));
-        plc.addEntry(testJcrPath, privilegesFromNames(PrivilegeConstants.JCR_VERSION_MANAGEMENT), svRestrictions, ImmutableMap.of());
+        plc.addEntry(testJcrPath, privilegesFromNames(PrivilegeConstants.JCR_VERSION_MANAGEMENT), svRestrictions, Map.of());
     }
 
     @Test
@@ -355,7 +355,7 @@ public class PrincipalPolicyImplTest extends AbstractPrincipalBasedTest {
 
         PrincipalPolicyImpl plc = new PrincipalPolicyImpl(principal, POLICY_OAK_PATH, mp);
         Map<String,Value> svRestrictions = ImmutableMap.of("mandatory", getValueFactory(root).createValue(1));
-        plc.addEntry(testJcrPath, privilegesFromNames(PrivilegeConstants.JCR_VERSION_MANAGEMENT), svRestrictions, ImmutableMap.of());
+        plc.addEntry(testJcrPath, privilegesFromNames(PrivilegeConstants.JCR_VERSION_MANAGEMENT), svRestrictions, Map.of());
 
         assertTrue(plc.getEntries().get(0).getRestrictions().contains(r));
     }
