@@ -24,6 +24,7 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
 import java.util.TreeSet;
 import java.util.concurrent.atomic.AtomicLong;
@@ -188,11 +189,11 @@ public class CachedMembershipLoginTest extends AbstractExternalTest {
                         new AppConfigurationEntry(
                                 GuestLoginModule.class.getName(),
                                 OPTIONAL,
-                                ImmutableMap.of()),
+                                Map.of()),
                         new AppConfigurationEntry(
                                 TokenLoginModule.class.getName(),
                                 SUFFICIENT,
-                                ImmutableMap.of()),
+                                Map.of()),
                         new AppConfigurationEntry(
                                 ExternalLoginModule.class.getName(),
                                 SUFFICIENT,
@@ -202,7 +203,7 @@ public class CachedMembershipLoginTest extends AbstractExternalTest {
                         new AppConfigurationEntry(
                                 LoginModuleImpl.class.getName(),
                                 SUFFICIENT,
-                                ImmutableMap.of())
+                                Map.of())
                 };
             }
         };
