@@ -193,7 +193,7 @@ public class TokenLoginModuleTest extends AbstractSecurityTest {
     @Test
     public void testMissingTokenProvider() throws Exception {
         TokenLoginModule lm = new TokenLoginModule();
-        lm.initialize(new Subject(), null, ImmutableMap.<String, Object>of(), ImmutableMap.<String, Object>of());
+        lm.initialize(new Subject(), null, Map.of(), Map.of());
 
         assertFalse(lm.login());
         assertFalse(lm.commit());
@@ -203,7 +203,7 @@ public class TokenLoginModuleTest extends AbstractSecurityTest {
     @Test
     public void testMissingTokenProvider2() throws Exception {
         TokenLoginModule lm = new TokenLoginModule();
-        lm.initialize(new Subject(), new TestCallbackHandler(null), ImmutableMap.<String, Object>of(), ImmutableMap.<String, Object>of());
+        lm.initialize(new Subject(), new TestCallbackHandler(null), Map.of(), Map.of());
 
         assertFalse(lm.login());
         assertFalse(lm.commit());
@@ -216,7 +216,7 @@ public class TokenLoginModuleTest extends AbstractSecurityTest {
         TokenLoginModule lm = new TokenLoginModule();
         lm.initialize(new Subject(), new TestCallbackHandler(null),
                 ImmutableMap.of(AbstractLoginModule.SHARED_KEY_CREDENTIALS, mock(Credentials.class)),
-                ImmutableMap.of());
+                Map.of());
 
         assertFalse(lm.login());
         assertFalse(lm.commit());
@@ -228,7 +228,7 @@ public class TokenLoginModuleTest extends AbstractSecurityTest {
         TokenProvider tp = new TokenProviderImpl(root, ConfigurationParameters.EMPTY, getUserConfiguration());
 
         TokenLoginModule lm = new TokenLoginModule();
-        lm.initialize(new Subject(), new TestCallbackHandler(tp), ImmutableMap.<String, Object>of(), ImmutableMap.<String, Object>of());
+        lm.initialize(new Subject(), new TestCallbackHandler(tp), Map.of(), Map.of());
 
         assertFalse(lm.login());
         assertFalse(lm.commit());
@@ -238,7 +238,7 @@ public class TokenLoginModuleTest extends AbstractSecurityTest {
     @Test
     public void testUnsupportedCallbackException() throws Exception {
         TokenLoginModule lm = new TokenLoginModule();
-        lm.initialize(new Subject(), new ThrowingCallbackHandler(UnsupportedCallbackException.class), ImmutableMap.<String, Object>of(), ImmutableMap.<String, Object>of());
+        lm.initialize(new Subject(), new ThrowingCallbackHandler(UnsupportedCallbackException.class), Map.of(), Map.of());
 
         assertFalse(lm.login());
         assertFalse(lm.commit());
@@ -248,7 +248,7 @@ public class TokenLoginModuleTest extends AbstractSecurityTest {
     @Test
     public void testIOException() throws Exception {
         TokenLoginModule lm = new TokenLoginModule();
-        lm.initialize(new Subject(), new ThrowingCallbackHandler(IOException.class), ImmutableMap.<String, Object>of(), ImmutableMap.<String, Object>of());
+        lm.initialize(new Subject(), new ThrowingCallbackHandler(IOException.class), Map.of(), Map.of());
 
         assertFalse(lm.login());
         assertFalse(lm.commit());
@@ -265,7 +265,7 @@ public class TokenLoginModuleTest extends AbstractSecurityTest {
         TokenLoginModule lm = new TokenLoginModule();
         lm.initialize(new Subject(), new TestCallbackHandler(tp),
                 ImmutableMap.<String, Object>of(AbstractLoginModule.SHARED_KEY_CREDENTIALS, new Credentials() {}),
-                ImmutableMap.<String, Object>of());
+                Map.of());
 
         assertFalse(lm.login());
         try {
@@ -294,7 +294,7 @@ public class TokenLoginModuleTest extends AbstractSecurityTest {
         };
         lm.initialize(subject, new TestCallbackHandler(tp, cbh),
                 sharedState,
-                ImmutableMap.<String, Object>of());
+                Map.of());
 
         assertTrue(lm.login());
         assertTrue(lm.commit());
@@ -323,7 +323,7 @@ public class TokenLoginModuleTest extends AbstractSecurityTest {
         Map sharedState = Maps.newHashMap(ImmutableMap.of(AbstractLoginModule.SHARED_KEY_CREDENTIALS, sc));
         lm.initialize(subject, new TestCallbackHandler(tp),
                 sharedState,
-                ImmutableMap.<String, Object>of());
+                Map.of());
 
         assertFalse(lm.login());
         assertFalse(lm.commit());
@@ -340,7 +340,7 @@ public class TokenLoginModuleTest extends AbstractSecurityTest {
         TokenLoginModule lm = new TokenLoginModule();
         lm.initialize(new Subject(), new TestCallbackHandler(tp),
                 ImmutableMap.of(AbstractLoginModule.SHARED_KEY_CREDENTIALS, "notCredentialsObject"),
-                ImmutableMap.of());
+                Map.of());
 
         assertFalse(lm.login());
         assertFalse(lm.commit());
@@ -354,8 +354,8 @@ public class TokenLoginModuleTest extends AbstractSecurityTest {
 
         TokenLoginModule lm = new TokenLoginModule();
         lm.initialize(new Subject(), new TestCallbackHandler(tp),
-                ImmutableMap.of(),
-                ImmutableMap.of());
+                Map.of(),
+                Map.of());
 
         assertFalse(lm.login());
         assertFalse(lm.commit());
@@ -382,7 +382,7 @@ public class TokenLoginModuleTest extends AbstractSecurityTest {
         TokenLoginModule lm = new TokenLoginModule();
         lm.initialize(new Subject(), new TestCallbackHandler(tp, cbh),
                 sharedState,
-                ImmutableMap.of());
+                Map.of());
 
         assertFalse(lm.login());
         assertFalse(lm.commit());
@@ -409,7 +409,7 @@ public class TokenLoginModuleTest extends AbstractSecurityTest {
         TokenLoginModule lm = new TokenLoginModule();
         lm.initialize(new Subject(), new TestCallbackHandler(tp, cbh),
                 sharedState,
-                ImmutableMap.of());
+                Map.of());
 
         assertFalse(lm.login());
         assertFalse(lm.commit());
